<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".footballActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starte2"
            android:textSize="20sp"
            android:padding="5dp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:paddingLeft="40dp"
            android:src="@drawable/frontsquat"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fsqua"
            android:textSize="20sp"
            android:padding="5dp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:paddingLeft="40dp"
            android:src="@drawable/barbellsquat"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backsqu"
            android:textSize="20sp"
            android:padding="5dp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:paddingLeft="75dp"
            android:src="@drawable/bulgariansplitsquat"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bulgariansplitsqu"
            android:textSize="20sp"
            android:padding="5dp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:paddingLeft="50dp"
            android:src="@drawable/glutebridge"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/glutebr"
            android:textSize="20sp"
            android:padding="5dp"
            android:textStyle="bold"/>

    </LinearLayout>

</ScrollView>